--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.3;
 }
 
 ul {
@@ -61,4 +62,49 @@ a {
   background-color: #151515;
   color: #fff;
   padding: 50px 0 32px;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 58px;
+}
+
+/* Задаем max-width чтобы при переполнении контента, верстка не сломалась*/
+.footer__menu-list {
+  max-width: 250px;
+}
+
+.footer__menu-title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 29px;
+  padding-bottom: 20px;
+}
+
+.footer__menu-item + .footer__menu-item {
+  padding-top: 20px;
+}
+
+.footer__menu-link {
+  font-weight: 400;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-bottom: 50px;
+}
+
+.footer__copy {
+  max-width: 800px;
+  margin: 0 auto 30px;
+  text-align: center;
+}
+
+.copy__nav-list {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
 }
