--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a {
 }
 
 .header-main {
-  /* background-color: transparent; */
+  background-color: transparent;
 }
 
 .header__inner {
@@ -122,4 +122,23 @@ a {
 
 .main {
   flex-grow: 1;
+}
+
+.top {
+  color: #fff;
+  text-align: center;
+}
+
+.title {
+  font-size: 96px;
+  font-weight: 700;
+}
+
+.top__link {
+  font-size: 36px;
+  font-weight: 700;
+  background-color: #151515;
+  padding: 23px;
+  max-width: 430px;
+  display: inline-block;
 }
