--- a/css/style.css
+++ b/css/style.css
@@ -127,11 +127,14 @@ a {
 .top {
   color: #fff;
   text-align: center;
+  padding-top: 105px;
+  padding-bottom: 50px;
 }
 
 .title {
   font-size: 96px;
   font-weight: 700;
+  padding-bottom: 40px;
 }
 
 .top__link {
@@ -140,5 +143,7 @@ a {
   background-color: #151515;
   padding: 23px;
   max-width: 430px;
+  width: 100%;
   display: inline-block;
+  text-transform: uppercase;
 }
