--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ a {
 }
 
 .header-main {
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  right: 0;
   background-color: transparent;
 }
 
@@ -125,9 +129,13 @@ a {
 }
 
 .top {
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  right: 0;
   color: #fff;
   text-align: center;
-  padding-top: 105px;
+  padding-top: 247px;
   padding-bottom: 50px;
 }
 
@@ -146,4 +154,44 @@ a {
   width: 100%;
   display: inline-block;
   text-transform: uppercase;
+}
+
+.swiper-slide {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+}
+
+.swiper::after {
+  content: "";
+  background-color: rgba(21, 21, 21, 0.3);
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.swiper-pagination {
+  padding-bottom: 10px;
+}
+
+.swiper-pagination-bullet {
+  width: 120px;
+  height: 3px;
+  background-color: #151515;
+  border-radius: 0;
+  opacity: 1;
+  margin-right: 30px;
+}
+
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin-right: 30px;
+}
+
+.swiper-pagination-bullet-active {
+  height: 6px;
+  background-color: #fff;
 }
