how-does section

--- a/css/style.css
+++ b/css/style.css
@@ -231,3 +231,55 @@ a {
 .why-lease__text {
   text-align: left;
 }
+
+.how-does {
+  padding-bottom: 150px;
+}
+
+.how-does__inner {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.how-does-title {
+  font-size: 24px;
+  font-weight: 700;
+  padding-top: 50px;
+}
+
+.how-does-list {
+  padding: 50px 0 70px;
+  counter-reset: myCounter;
+}
+
+.how-does-item {
+  list-style-type: none;
+  width: 270px;
+  position: relative;
+  margin-left: auto;
+  padding: 19px 0 19px 240px;
+  box-sizing: content-box;
+  min-height: 63px;
+}
+
+.how-does-item + .how-does-item {
+  margin-top: 40px;
+}
+
+.how-does-item::before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #0066ff;
+  font-size: 48px;
+  font-weight: 700;
+  color: #fff;
+}
