--- a/css/style.css
+++ b/css/style.css
@@ -283,3 +283,23 @@ a {
   font-weight: 700;
   color: #fff;
 }
+
+.welcome-video {
+  padding-bottom: 150px;
+}
+
+.welcome-video__title {
+  margin-bottom: 20px;
+}
+
+.welcome-video__text {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.welcome-video__content {
+  margin: 0 auto;
+  display: block;
+}
