important things section

--- a/css/style.css
+++ b/css/style.css
@@ -303,3 +303,29 @@ a {
   margin: 0 auto;
   display: block;
 }
+
+.important {
+  padding-bottom: 150px;
+}
+
+.important__title {
+  margin-bottom: 20px;
+}
+
+.important__text {
+  max-width: 580px;
+  margin: 0 auto 50px;
+}
+
+.important__list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.important__item {
+  max-width: 270px;
+}
+
+.important__item-image {
+  margin-bottom: 20px;
+}
